# research-owl

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml
docs/rag-service/: README.md  api-reference.md  database-schema.md
paper/: generate_figures.py  paper.md  references.bib
rag-service/: .dockerignore  Dockerfile  README.md  pyproject.toml
rag-service/scripts/: backfill_citations.py  backfill_entities.py  reset_all.py
rag-service/src/research_owl/: arxiv_search.py  config.py  db.py  graph_service.py  hybrid_retriever.py  lightrag_service.py  main.py  models.py  progress.py  qdrant_service.py  umap_reducer.py
rag-service/src/research_owl/evaluation/: __init__.py  dataset_generator.py  evaluator.py
rag-service/src/research_owl/ingestion/: chunker.py  citation_parser.py  entity_extractor.py  pipeline.py
rag-service/src/research_owl/vectorstore/: embeddings.py  qdrant.py
webapp/: .dockerignore  Dockerfile  package-lock.json  package.json
webapp/src/app/: globals.css  layout.tsx  page.tsx
webapp/src/app/architecture/: page.tsx
webapp/src/app/documents/: page.tsx
webapp/src/app/embeddings/: page.tsx
webapp/src/app/evaluation/: page.tsx
webapp/src/app/graph/: page.tsx
webapp/src/app/ingest/: page.tsx
webapp/src/app/papers/: page.tsx
webapp/src/app/presentation/: page.tsx
webapp/src/app/research/: page.tsx
webapp/src/components/: app-sidebar.tsx  hybrid-search-tool.tsx  list-papers-tool.tsx  search-chunks-tool.tsx  show-image-tool.tsx
webapp/src/components/ai-elements/: tool.tsx
webapp/src/lib/: api.ts  rag-server.ts
(+72 files in other folders)
