[project]
name = "research-owl"
version = "0.3.0"
description = "RAG-Anything powered research assistant for arxiv papers"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "raganything",
    "docling",
    "docling-core",
    "lightrag-hku",
    "qdrant-client",
    "pydantic-settings",
    "python-dotenv",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
