[project]
name = "research-owl"
version = "0.3.0"
description = "Qdrant-native RAG research assistant for arxiv papers"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "docling",
    "docling-core",
    "openai>=1.0",
    "qdrant-client",
    "pydantic-settings",
    "python-dotenv",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
